added  flag to either roatate all cast nodes or only older version k8s nodes

--- a/deploy/mainfaist.yaml
+++ b/deploy/mainfaist.yaml
@@ -44,6 +44,8 @@ spec:
               value: ""
             - name: API_KEY
               value: ""
+            - name: REPLACE_OLD_KUBE_VERSION_FLAG
+              value: False
             
             resources:
               limits:
